--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "netlify-lambda": "^2.0.14",
+    "path": "^0.12.7",
     "serverless-http": "^2.7.0",
     "stripe": "^7.1.0"
   }
